fix: fix app crash on folder delete, fix index section overflow
- when a folder was deleted no folder is selected, so Main component wasn't able to find any tasks,
so the app would crash

- when FolderForm wasactive it would increase width of the Index section

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@ html {
 
 #root {
 	display: grid;
-	grid-template-columns: 1.2fr 3fr;
+	grid-template-columns: 1fr 3fr;
 	grid-template-areas: 'index main';
 	height: 100vh;
 }
@@ -50,9 +50,12 @@ html {
 		}
 	}
 
-	.input-cont {
-		input {
-			margin: 0 (-$offset-xs);
+	form {
+		min-width: 0; /* prevents grid from expanding */
+		.input-cont {
+			input {
+				margin: 0 (-$offset-xs);
+			}
 		}
 	}
 
@@ -135,9 +138,13 @@ html {
 	.tasks {
 		display: flex;
 		flex-direction: column;
-		gap: 10px;
+		gap: $offset-m;
 
 		margin: $offset-s;
+
+	.notSelected {
+		align-self: start;
+		justify-self: center;
 	}
 }
 
